--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
          fill: blue;
      }
 
-     #slider-ui {
-         float: left;
-         width: 555px;
-     }
-
-     .slider-container {
+     .controls-container {
          float: left;
          width: 100%;
          border: 1px solid #ddd;
@@ -46,24 +41,6 @@
          margin-top: 10px;
      }
 
-     .slider-label {
-         float: left;
-         width: 50px;
-         font-family: sans-serif;
-         font-size: 14px;
-     }
-
-     .slider-val {
-         float: left;
-         width: 60px;
-         border: 0px;
-     }
-
-     .slider {
-         margin-top: 2px;
-         float: left;
-         width: 400px;
-     }
     </style>
 </head>
 
@@ -84,26 +61,31 @@
     </nav>
 
     <div class="container">
-        <div id="slider-ui">
-            <div class="slider-container">
-                <label class="slider-label" for="k-val">k:</label>
-                <input class="spinner" id="k-val" type="text" value="5.00">
+        <div class="controls-container">
+        <form>
+            <div class="form-group row">
+                <label for="k" class="col-sm-2 col-form-label">k:</label>
+                <div class="col-sm-10">
+                    <input id="k" type="number" class="form-control" value="1"></input>
+                </div>
             </div>
-            <div class="slider-container">
-                <label class="slider-label" for="alpha-val">Alpha:</label>
-                <input class="slider-val" id="alpha-val" type="text" readonly value="5.00">
-                <div class="slider" id="alpha-slider"></div>
+            <div class="form-group row">
+                <label for="n" class="col-sm-2 col-form-label">n:</label>
+                <div class="col-sm-10">
+                <input id="n" type="number" class="form-control" value="1"></input>
+                </div>
             </div>
-            <div class="slider-container">
-                <label class="slider-label" for="beta-val">Beta:</label>
-                <input class="slider-val" id="beta-val" type="text" readonly value="5.00">
-                <div class="slider" id="beta-slider"></div>
+            <div class="form-group row">
+                <label for="alpha" class="col-auto col-form-label">alpha:</label>
+                <div class="col-auto">
+                <input id="alpha" type="number" class="form-control" value="2"></input>
+                </div>
+                <label for="beta" class="col-auto col-form-label">beta:</label>
+                <div class="col-auto">
+                <input id="beta" type="number" class="form-control" value="2"></input>
+                </div>
             </div>
-            <div class="slider-container">
-                <label class="slider-label" for="y-val">Max Y:</label>
-                <input class="slider-val" id="y-val" type="text" readonly value="3">
-                <div class="slider" id="y-slider"></div>
-            </div>
+        </form>
         </div>
 
         <div id="vis"></div>
@@ -117,73 +99,73 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.3/math.js"></script>
 
     <script type="text/javascript">
-     $(".spinner").spinner();
 
      function betaPDF(x, alpha, beta) {
-         return Math.pow(x, alpha - 1) * Math.pow(1 - x, beta - 1) * math.gamma(alpha + beta) / (math.gamma(alpha) * math.gamma(beta));
+            if (alpha + beta > 120) {
+                var bigalpha = math.bignumber(alpha)
+                var bigbeta = math.bignumber(beta)
+                var betafuncval = math.divide(math.gamma(math.add(bigalpha, bigbeta)),
+                    (math.multiply(math.gamma(bigalpha),
+                        math.gamma(bigbeta))));
+            } else {
+                var betafuncval = math.gamma(alpha + beta) /
+                    (math.gamma(alpha) * math.gamma(beta));
+            }
+            return Math.pow(x, alpha - 1) *
+                Math.pow(1 - x, beta - 1) *
+                betafuncval;
      }
 
-     function arrayOf2DimArrays(xval, yval, xscale, yscale) {
-         // Converts an array of x-axis values and an array of y-axis values into an array of coordinates.
-         // E.g. xval=[1, 2, 3] and yval=[11, 12, 13] -> [[xscale(1), yscale(11)], [xscale(2), yscale(12)], [xscale(3), yscale(13)]]
-         var arr = [];
-         for (var i = 0; i < xval.length; i++) {
-             arr.push([xscale(xval[i]), yscale(yval[i])]);
+     $("#k").change(function() {
+         var k = Number($("#k").val());
+         var n = Number($("#n").val());
+         if (k < 0) {
+             k = 0;
          }
-         return arr;
-     }
-
-     // Set up the slider for the alpha parameter.
-     $(function() {
-         $("#alpha-slider").slider({
-             range: "min",
-             value: 500,
-             min: 1,
-             max: 1000,
-             slide: function(event, ui) {
-                 $("#alpha-val").val((0.01 * ui.value).toFixed(2));
-                 drawBeta();
-             }
-         });
+         if (n < k) {
+             n = k;
+         }
+         $("#k").val(k);
+         $("#n").val(n);
+         $("#alpha").val(k + 1);
+         $("#beta").val(n - k + 1);
+         drawBeta();
      });
 
-     // Set up the slider for the beta parameter.
-     $(function() {
-         $("#beta-slider").slider({
-             range: "min",
-             value: 500,
-             min: 1,
-             max: 1000,
-             slide: function(event, ui) {
-                 $("#beta-val").val((0.01 * ui.value).toFixed(2));
-                 drawBeta();
-             }
-         });
+     $("#n").change(function() {
+         var k = Number($("#k").val());
+         var n = Number($("#n").val());
+         if (n < 1) {
+             n = 1;
+         }
+         if (n < k) {
+             k = n;
+         }
+         $("#k").val(k);
+         $("#n").val(n);
+         $("#alpha").val(k + 1);
+         $("#beta").val(n - k + 1);
+         drawBeta();
      });
 
-     // Set up the slider for the y scale parameter. 
-     $(function() {
-         $("#y-slider").slider({
-             range: "min",
-             value: 3,
-             min: 1,
-             max: 10,
-             slide: function(event, ui) {
-                 $("#y-val").val(ui.value.toFixed(0));
-                 drawBeta();
-             }
-         });
+     $("#alpha").change(function() {
+         drawBeta();
+     });
+
+     $("#beta").change(function() {
+         drawBeta();
      });
 
      function drawBeta() {
-         var width = 600,
+         var width = 800,
              height = 400,
              margin = 40;
 
          // Get the parameters from the sliders.
-         var alpha = Number($("#alpha-val").val());
-         var beta = Number($("#beta-val").val());
-         var maxY = Number($("#y-val").val());
+         var alpha = Number($("#alpha").val());
+         var beta = Number($("#beta").val());
+         var mean = alpha / (alpha + beta);
+         var maxY = 1.1 * betaPDF(mean, alpha, beta);
 
          if (d3.select("svg") != false) {
              d3.select("svg").remove();
@@ -204,8 +186,7 @@
                             .range([0 + margin, height - margin]);
 
          // Calculate x and y, arrays giving points on the Beta PDF.
-         var x = [];
-         var y = [];
+         var linexy = [];
          var credxy = []
          var credx = 1;
          var credarea = 0;
@@ -213,8 +194,7 @@
          for (var xi = 0; xi <= 1; xi = xi + 0.001) {
              yi = betaPDF(xi, alpha, beta)
              if (isFinite(yi)) {
-                 x.push(xi);
-                 y.push(yi);
+                 linexy.push([xTransform(xi), yTransform(yi)]);
              }
              credarea = credarea + yi * 0.001;
              if (credarea > 0.05) {
@@ -265,10 +245,10 @@
                               .interpolate("linear");
          g.append("path")
           .attr("class", "betaline")
-          .attr("d", lineFunction(arrayOf2DimArrays(x, y, xTransform, yTransform)))
+          .attr("d", lineFunction(linexy));
          g.append("path")
           .attr("class", "credarea")
-          .attr("d", lineFunction(credxy))
+          .attr("d", lineFunction(credxy));
      }
 
      drawBeta();
