--- a/index.html
+++ b/index.html
@@ -11,36 +11,35 @@
     <title>Bug probability calculator</title>
 
     <style>
-     .axis path,
-     .axis line {
-         stroke: black;
-         fill: none;
-         shape-rendering: crispEdges;
-     }
+        .axis path,
+        .axis line {
+            stroke: black;
+            fill: none;
+            shape-rendering: crispEdges;
+        }
 
-     .axis text {
-         font-family: sans-serif;
-         font-size: 14px;
-     }
+        .axis text {
+            font-family: sans-serif;
+            font-size: 14px;
+        }
 
-     .betaline {
-         fill: none;
-         stroke-width: 2;
-         stroke: rgba(0, 0, 255, 1);
-     }
+        .betaline {
+            fill: none;
+            stroke-width: 2;
+            stroke: rgba(0, 0, 255, 1);
+        }
 
-     .credarea {
-         fill: blue;
-     }
+        .credarea {
+            fill: blue;
+        }
 
-     .controls-container {
-         float: left;
-         width: 100%;
-         border: 1px solid #ddd;
-         padding: 10px;
-         margin-top: 10px;
-     }
-
+        .controls-container {
+            float: left;
+            width: 100%;
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
@@ -62,30 +61,30 @@
 
     <div class="container">
         <div class="controls-container">
-        <form>
-            <div class="form-group row">
-                <label for="k" class="col-sm-2 col-form-label">k:</label>
-                <div class="col-sm-10">
-                    <input id="k" type="number" class="form-control" value="1"></input>
+            <form>
+                <div class="form-group row">
+                    <label for="k" class="col-sm-2 col-form-label">k:</label>
+                    <div class="col-sm-10">
+                        <input id="k" type="number" class="form-control" value="1"></input>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row">
-                <label for="n" class="col-sm-2 col-form-label">n:</label>
-                <div class="col-sm-10">
-                <input id="n" type="number" class="form-control" value="1"></input>
+                <div class="form-group row">
+                    <label for="n" class="col-sm-2 col-form-label">n:</label>
+                    <div class="col-sm-10">
+                        <input id="n" type="number" class="form-control" value="1"></input>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row">
-                <label for="alpha" class="col-auto col-form-label">alpha:</label>
-                <div class="col-auto">
-                <input id="alpha" type="number" class="form-control" value="2"></input>
+                <div class="form-group row">
+                    <label for="alpha" class="col-auto col-form-label">alpha:</label>
+                    <div class="col-auto">
+                        <input id="alpha" type="number" class="form-control" value="2"></input>
+                    </div>
+                    <label for="beta" class="col-auto col-form-label">beta:</label>
+                    <div class="col-auto">
+                        <input id="beta" type="number" class="form-control" value="2"></input>
+                    </div>
                 </div>
-                <label for="beta" class="col-auto col-form-label">beta:</label>
-                <div class="col-auto">
-                <input id="beta" type="number" class="form-control" value="2"></input>
-                </div>
-            </div>
-        </form>
+            </form>
         </div>
 
         <div id="vis"></div>
@@ -99,8 +98,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.3/math.js"></script>
 
     <script type="text/javascript">
-
-     function betaPDF(x, alpha, beta) {
+        function betaPDF(x, alpha, beta) {
             if (alpha + beta > 120) {
                 var bigalpha = math.bignumber(alpha)
                 var bigbeta = math.bignumber(beta)
@@ -114,144 +112,144 @@
             return Math.pow(x, alpha - 1) *
                 Math.pow(1 - x, beta - 1) *
                 betafuncval;
-     }
+        }
 
-     $("#k").change(function() {
-         var k = Number($("#k").val());
-         var n = Number($("#n").val());
-         if (k < 0) {
-             k = 0;
-         }
-         if (n < k) {
-             n = k;
-         }
-         $("#k").val(k);
-         $("#n").val(n);
-         $("#alpha").val(k + 1);
-         $("#beta").val(n - k + 1);
-         drawBeta();
-     });
+        $("#k").change(function() {
+            var k = Number($("#k").val());
+            var n = Number($("#n").val());
+            if (k < 0) {
+                k = 0;
+            }
+            if (n < k) {
+                n = k;
+            }
+            $("#k").val(k);
+            $("#n").val(n);
+            $("#alpha").val(k + 1);
+            $("#beta").val(n - k + 1);
+            drawBeta();
+        });
 
-     $("#n").change(function() {
-         var k = Number($("#k").val());
-         var n = Number($("#n").val());
-         if (n < 1) {
-             n = 1;
-         }
-         if (n < k) {
-             k = n;
-         }
-         $("#k").val(k);
-         $("#n").val(n);
-         $("#alpha").val(k + 1);
-         $("#beta").val(n - k + 1);
-         drawBeta();
-     });
+        $("#n").change(function() {
+            var k = Number($("#k").val());
+            var n = Number($("#n").val());
+            if (n < 1) {
+                n = 1;
+            }
+            if (n < k) {
+                k = n;
+            }
+            $("#k").val(k);
+            $("#n").val(n);
+            $("#alpha").val(k + 1);
+            $("#beta").val(n - k + 1);
+            drawBeta();
+        });
 
-     $("#alpha").change(function() {
-         drawBeta();
-     });
+        $("#alpha").change(function() {
+            drawBeta();
+        });
 
-     $("#beta").change(function() {
-         drawBeta();
-     });
+        $("#beta").change(function() {
+            drawBeta();
+        });
 
-     function drawBeta() {
-         var width = 800,
-             height = 400,
-             margin = 40;
+        function drawBeta() {
+            var width = 800,
+                height = 400,
+                margin = 40;
 
-         // Get the parameters from the sliders.
-         var alpha = Number($("#alpha").val());
-         var beta = Number($("#beta").val());
-         var mean = alpha / (alpha + beta);
-         var maxY = 1.1 * betaPDF(mean, alpha, beta);
+            // Get the parameters from the sliders.
+            var alpha = Number($("#alpha").val());
+            var beta = Number($("#beta").val());
+            var mean = alpha / (alpha + beta);
+            var maxY = 1.1 * betaPDF(mean, alpha, beta);
 
-         if (d3.select("svg") != false) {
-             d3.select("svg").remove();
-         }
+            if (d3.select("svg") != false) {
+                d3.select("svg").remove();
+            }
 
-         var vis = d3.select("#vis")
-                     .append("svg:svg")
-                     .attr("width", width)
-                     .attr("height", height);
-         var g = vis.append("svg:g");
+            var vis = d3.select("#vis")
+                .append("svg:svg")
+                .attr("width", width)
+                .attr("height", height);
+            var g = vis.append("svg:g");
 
-         // Create the rescaling transformations.
-         var xTransform = d3.scale.linear()
-                            .domain([0, 1])
-                            .range([0 + margin, width - margin]);
-         var yTransform = d3.scale.linear()
-                            .domain([maxY, 0])
-                            .range([0 + margin, height - margin]);
+            // Create the rescaling transformations.
+            var xscale = d3.scale.linear()
+                .domain([0, 1])
+                .range([0 + margin, width - margin]);
+            var yscale = d3.scale.linear()
+                .domain([maxY, 0])
+                .range([0 + margin, height - margin]);
 
-         // Calculate x and y, arrays giving points on the Beta PDF.
-         var linexy = [];
-         var credxy = []
-         var credx = 1;
-         var credarea = 0;
-         var credfirst = true;
-         for (var xi = 0; xi <= 1; xi = xi + 0.001) {
-             yi = betaPDF(xi, alpha, beta)
-             if (isFinite(yi)) {
-                 linexy.push([xTransform(xi), yTransform(yi)]);
-             }
-             credarea = credarea + yi * 0.001;
-             if (credarea > 0.05) {
-                 if (credfirst) {
-                     credx = xi;
-                     credxy.push([xTransform(xi), yTransform(0)])
-                     credfirst = false;
-                 }
-                 if (isFinite(yi)) {
-                     credxy.push([xTransform(xi), yTransform(yi)])
-                 } else {
-                     credxy.push([xTransform(xi), height])
-                 }
-             }
-         }
-         credxy.push([xTransform(1), yTransform(0)]);
+            // Calculate x and y, arrays giving points on the Beta PDF.
+            var linexy = [];
+            var credxy = []
+            var credx = 1;
+            var credarea = 0;
+            var credfirst = true;
+            for (var xi = 0; xi <= 1; xi = xi + 0.001) {
+                yi = betaPDF(xi, alpha, beta)
+                if (isFinite(yi)) {
+                    linexy.push([xscale(xi), yscale(yi)]);
+                }
+                credarea = credarea + yi * 0.001;
+                if (credarea > 0.05) {
+                    if (credfirst) {
+                        credx = xi;
+                        credxy.push([xscale(xi), yscale(0)])
+                        credfirst = false;
+                    }
+                    if (isFinite(yi)) {
+                        credxy.push([xscale(xi), yscale(yi)])
+                    } else {
+                        credxy.push([xscale(xi), height])
+                    }
+                }
+            }
+            credxy.push([xscale(1), yscale(0)]);
 
-         // X-axis.
-         var xAxis = d3.svg.axis().scale(xTransform).orient("bottom");
-         g.append("g")
-          .attr("class", "axis")
-          .attr("transform", "translate(0," + (height - margin) + ")")
-          .call(xAxis);
+            // X-axis.
+            var xAxis = d3.svg.axis().scale(xscale).orient("bottom");
+            g.append("g")
+                .attr("class", "axis")
+                .attr("transform", "translate(0," + (height - margin) + ")")
+                .call(xAxis);
 
-         // Y-axis.
-         var yAxis = d3.svg.axis().scale(yTransform).orient("left");
-         g.append("g")
-          .attr("class", "axis")
-          .attr("transform", "translate(" + margin + ",0)")
-          .call(yAxis);
+            // Y-axis.
+            var yAxis = d3.svg.axis().scale(yscale).orient("left");
+            g.append("g")
+                .attr("class", "axis")
+                .attr("transform", "translate(" + margin + ",0)")
+                .call(yAxis);
 
-         // cred X value
-         g.append("text")
-            .attr("class", "x label")
-            .attr("text-anchor", "middle")
-            .attr("x", xTransform(credx))
-            .attr("y", height - 6)
-            .text(credx.toFixed(3));
+            // cred X value
+            g.append("text")
+                .attr("class", "x label")
+                .attr("text-anchor", "middle")
+                .attr("x", xscale(credx))
+                .attr("y", height - 6)
+                .text(credx.toFixed(3));
 
-         // Draw the Beta PDF and credible area.
-         var lineFunction = d3.svg.line()
-                              .x(function(d) {
-                                  return d[0];
-                              })
-                              .y(function(d) {
-                                  return d[1];
-                              })
-                              .interpolate("linear");
-         g.append("path")
-          .attr("class", "betaline")
-          .attr("d", lineFunction(linexy));
-         g.append("path")
-          .attr("class", "credarea")
-          .attr("d", lineFunction(credxy));
-     }
+            // Draw the Beta PDF and credible area.
+            var lineFunction = d3.svg.line()
+                .x(function(d) {
+                    return d[0];
+                })
+                .y(function(d) {
+                    return d[1];
+                })
+                .interpolate("linear");
+            g.append("path")
+                .attr("class", "betaline")
+                .attr("d", lineFunction(linexy));
+            g.append("path")
+                .attr("class", "credarea")
+                .attr("d", lineFunction(credxy));
+        }
 
-     drawBeta();
+        drawBeta();
     </script>
 
 </body>
