--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
         .betaline {
             fill: none;
-            stroke-width: 2;
+            stroke-width: 8;
             stroke: rgba(0, 0, 255, 1);
         }
 
         .credarea {
-            fill: blue;
+            fill: #a6cee3;
         }
 
         .controls-container {
@@ -52,27 +52,21 @@
         <h1>bugnoulli</h1>
 
         <form>
-            <p>
-                There were
-                <input id="k" type="number" value="1" /> instances in
-                <input id="n" type="number" value="5" /> attempts</p>
-            <p>
-                The distribution of \(p\) of the corresponding binomial distribution has the following shape:
-            </p>
+            <p>There were
+                <input id="k" type="number" value="1" style="width: 3em;" /> instances in
+                <input id="n" type="number" value="5" style="width: 3em;" /> attempts.</p>
+            <p>The distribution of \(p\) of the corresponding binomial distribution has the following shape:</p>
         </form>
 
         <svg id="vis">
         <g>
           <g class="axis xaxis"/>
           <g class="axis yaxis"/>
+          <path class="credarea"/>
           <path class="betaline"/>
+          <text class="xmean x label"/>
+          <text class="xcred x label"/>
         </g>
-
-        <p>
-          <form>
-            <input id="alpha" type="hidden" value="2" />
-            <input id="beta" type="hidden" value="5" />
-          </form>
       </svg>
     </div>
 
@@ -86,44 +80,32 @@
     <script type="text/javascript">
         /* Get inputs for graph: **************************************************************/
 
-        $("#k").change(function() {
+        function sanitizeForm(changed) {
             var k = Number($("#k").val());
             var n = Number($("#n").val());
             if (k < 0) {
                 k = 0;
             }
-            if (n < k) {
-                n = k;
-            }
-            $("#k").val(k);
-            $("#n").val(n);
-            $("#alpha").val(k + 1);
-            $("#beta").val(n - k + 1);
-            updateBeta();
-        });
-
-        $("#n").change(function() {
-            var k = Number($("#k").val());
-            var n = Number($("#n").val());
             if (n < 1) {
                 n = 1;
             }
             if (n < k) {
-                k = n;
+                if (changed == "k") {
+                    n = k;
+                } else if (changed == "n") {
+                    k = n;
+                }
             }
             $("#k").val(k);
             $("#n").val(n);
-            $("#alpha").val(k + 1);
-            $("#beta").val(n - k + 1);
             updateBeta();
-        });
+        }
 
-        $("#alpha").change(function() {
-            updateBeta();
+        $("#k").change(function() {
+            sanitizeForm("k");
         });
-
-        $("#beta").change(function() {
-            updateBeta();
+        $("#n").change(function() {
+            sanitizeForm("n");
         });
 
         /* Math: ******************************************************************************/
@@ -182,17 +164,19 @@
 
         function updateBeta() {
             var width = 800,
-                height = 400,
+                height = 480,
                 margin = 40;
 
-            var alpha = Number($("#alpha").val());
-            var beta = Number($("#beta").val());
+            var k = Number($("#k").val());
+            var n = Number($("#n").val());
+            var alpha = k + 1;
+            var beta = n - k + 1;
             var meanX = alpha / (alpha + beta);
             var maxY = 1.1 * betaPDF(meanX, alpha, beta);
 
             var vis = d3.select("svg")
                 .attr("width", width)
-                .attr("height", height);
+                .attr("height", height + 12);
 
             var xscale = d3.scale.linear()
                 .domain([0, 1])
@@ -201,22 +185,32 @@
                 .domain([maxY, 0])
                 .range([0 + margin, height - margin]);
 
-            // Draw the Beta PDF and credible area.
-            var lineFunction = d3.svg.line()
-                .x(function(d) {
-                    return xscale(d[0]);
-                })
-                .y(function(d) {
-                    return yscale(d[1]);
-                })
-                .interpolate("linear");
-
-            var calcbeta = calcBeta(alpha, beta);
-            var linexy = calcbeta[0];
-            var credxy = calcbeta[1];
-            d3.select("path.betaline")
-                .transition()
-                .attr("d", lineFunction(linexy));
+            // Calculate x and y, arrays giving points on the Beta PDF.
+            var credxy = [];
+            var credx = 1;
+            var credarea = 0;
+            var credfirst = true;
+            var linexy = [];
+            for (var xi = 0; xi <= 1; xi = xi + 0.001) {
+                yi = betaPDF(xi, alpha, beta)
+                if (isFinite(yi)) {
+                    linexy.push([xscale(xi), yscale(yi)]);
+                }
+                credarea = credarea + yi * 0.001;
+                if (credarea > 0.05) {
+                    if (credfirst) {
+                        credx = xi;
+                        credxy.push([xscale(xi), yscale(0)])
+                        credfirst = false;
+                    }
+                    if (isFinite(yi)) {
+                        credxy.push([xscale(xi), yscale(yi)])
+                    } else {
+                        credxy.push([xscale(xi), height])
+                    }
+                }
+            }
+            credxy.push([xscale(1), yscale(0)]);
 
             // X-axis.
             var xAxis = d3.svg.axis().scale(xscale).orient("bottom");
@@ -231,18 +225,42 @@
                 .transition()
                 .attr("transform", "translate(" + margin + ",0)")
                 .call(yAxis);
+
+            // Mean X (p)
+            d3.select("text.xmean")
+                .transition()
+                .attr("text-anchor", "middle")
+                .attr("x", xscale(meanX))
+                .attr("y", height - 6)
+                .text(meanX.toFixed(3));
+
+            // Draw the Beta PDF and credible area.
+            var lineFunction = d3.svg.line()
+                .x(function(d) {
+                    return d[0];
+                })
+                .y(function(d) {
+                    return d[1];
+                })
+                .interpolate("linear");
+            // cred X value
+            d3.select("text.xcred")
+                .transition()
+                .attr("text-anchor", "middle")
+                .attr("x", xscale(credx))
+                .attr("y", height + 9)
+                .text(credx.toFixed(3));
+            d3.select("path.credarea")
+                .transition()
+                .attr("d", lineFunction(credxy))
+            d3.select("path.betaline")
+                .transition()
+                .attr("d", lineFunction(linexy))
         }
 
         /* Initialization *********************************************************************/
 
-        function initialize() {
-            var k = Number($("#k").val());
-            var n = Number($("#n").val());
-            $("#alpha").val(k + 1);
-            $("#beta").val(n - k + 1);
-            updateBeta();
-        }
-        initialize();
+        updateBeta();
     </script>
 </body>
 
